// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OcProgress > sets correct classes for size { size: 'default', expectedSize: 'h-4' } 1`] = `
"<div data-v-9175bd1a="" class="oc-progress block relative overflow-x-hidden h-4" aria-valuemax="10" aria-valuenow="3" aria-busy="true" aria-valuemin="0" role="progressbar" style="background-color: var(--oc-role-surface-container);">
  <div data-v-9175bd1a="" class="absolute size-full transition-[width] duration-500" style="width: 30%; background-color: var(--oc-role-secondary);"></div>
</div>"
`;

exports[`OcProgress > sets correct classes for size { size: 'small', expectedSize: 'h-1' } 1`] = `
"<div data-v-9175bd1a="" class="oc-progress block relative overflow-x-hidden h-1" aria-valuemax="10" aria-valuenow="3" aria-busy="true" aria-valuemin="0" role="progressbar" style="background-color: var(--oc-role-surface-container);">
  <div data-v-9175bd1a="" class="absolute size-full transition-[width] duration-500" style="width: 30%; background-color: var(--oc-role-secondary);"></div>
</div>"
`;

exports[`OcProgress > sets correct classes for size { size: 'xsmall', expectedSize: 'h-0.5' } 1`] = `
"<div data-v-9175bd1a="" class="oc-progress block relative overflow-x-hidden h-0.5" aria-valuemax="10" aria-valuenow="3" aria-busy="true" aria-valuemin="0" role="progressbar" style="background-color: var(--oc-role-surface-container);">
  <div data-v-9175bd1a="" class="absolute size-full transition-[width] duration-500" style="width: 30%; background-color: var(--oc-role-secondary);"></div>
</div>"
`;
